[package]
name = "zeropool-tx"
version = "0.2.0"
edition = "2021"
description = "ZeroPool transaction format"
repository = "https://github.com/zeropoolnetwork/zeropool-tx"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.4.3"
fawkes-crypto = "4.4.0"
serde = "1.0.163"

[features]
default = ["std"]
std = ["serde/std"]
groth16 = ["fawkes-crypto/r1cs", "fawkes-crypto/backend_bellman_groth16"]
plonk = ["fawkes-crypto/plonk"]

